@@ -1,3 +1,12 @@
+2008-04-01  Maciej Stachowiak  <mjs@apple.com>
+
+        Reviewed by Sam.
+        
+        - add some missing toOpbject calls to avoid crashing when calling methods on primitives
+
+        * VM/Machine.cpp:
+        (KJS::Machine::privateExecute):
+
 2008-04-01  Geoffrey Garen  <ggaren@apple.com>
 
         Reviewed by Oliver Hunt.
